refactor: rename MathUtils to MathHelper and update references; improve message descriptions and visibility settings
update autoXP.java
- improvements